--- a/licenses.mdwn
+++ b/licenses.mdwn
@@ -4,7 +4,7 @@ The Solderpad Hardware License is closely based on the [Apache 2.0 software lice
 
 This patch was written by [Andrew Katz](http://twitter.com/andrewjskatz), with valuable input from [Andrew Back](http://carrierdetect.com), [Larry Rosen](http://www.rosenlaw.com/rosen.htm) and others.
 
-The license is currently undergoing conformance testing and approval from a number of bodies, but since there is the option to relicense under Apache 2.0, you know that this licence is conformant with the criteria of any entity which has approved Apache 2.0 (including [OSI](http://www.opensource.org) and [FSF](http://www.fsf.org]).
+The license is currently undergoing conformance testing and approval from a number of bodies, but since there is the option to relicense under Apache 2.0, you know that this licence is conformant with the criteria of any entity which has approved Apache 2.0 (including [OSI](http://www.opensource.org) and [FSF](http://www.fsf.org)).
 
 THIS LICENCE IS A PERMISSIVE LICENCE, SO DO NOT USE IT IF YOU WANT TO AVOID THE POSSIBILITY OF VARIANTS OF YOUR WORK BECOMING NON-FREE.
 
