--- a/licenses/SHL-0.5.mdwn
+++ b/licenses/SHL-0.5.mdwn
@@ -63,4 +63,4 @@ END OF TERMS AND CONDITIONS
 
 To apply this license to your work, attach the following boilerplate notice, with the fields enclosed by brackets "[]" replaced with your own identifying information. (Don't include the brackets!) The text should be enclosed in the appropriate comment syntax for the file format. We also recommend that a file or class name and description of purpose be included on the same "printed page" as the copyright notice for easier identification within third-party archives.
 
-    Copyright [yyyy] [name of copyright owner] Copyright and related rights are licensed under the Solderpad Hardware License, Version 0.5  (the "License"); you may not use this file except in compliance with the License.    You may obtain a copy of the License at <http://solderpad.org/licenses/SHL-0.5>. Unless required by applicable law or agreed to in writing, software, hardware and materials distributed under this License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.    See the License for the specific language governing permissions and limitations under the License. 
+> Copyright [yyyy] [name of copyright owner] Copyright and related rights are licensed under the Solderpad Hardware License, Version 0.5  (the "License"); you may not use this file except in compliance with the License.    You may obtain a copy of the License at <http://solderpad.org/licenses/SHL-0.5>. Unless required by applicable law or agreed to in writing, software, hardware and materials distributed under this License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.    See the License for the specific language governing permissions and limitations under the License. 
