--- a/licenses.mdwn
+++ b/licenses.mdwn
@@ -2,7 +2,7 @@
 
 The Solderpad Hardware Licence is closely based on the [Apache 2.0 software license](http://www.apache.org/licenses/LICENSE-2.0.html) (and in fact, if you adopt this licence with a preamble, one option for the licensee is to choose to use unported Apache 2.0). The licence differs from Apache mainly in that it covers additional forms of IP which are not covered by Apache (such as database extraction right), and also adjusts the terminology slightly to make it more understandable in a hardware context. It also works as a software licence (arguably better than Apache, mainly because of its adoption of IP other than copyright, patent and trade mark). 
 
-This patch was written by [Andrew Katz](http://twitter.com/andrewjskatz), with valuable input from [Andrew Back](http://carrierdetect.com), [Larry Rosen](http://www.rosenlaw.com/rosen.htm) and others.
+This patch was written by [Andrew Katz](http://twitter.com/andrewjskatz), with valuable input from [Andrew Back](https://abopen.com), [Larry Rosen](http://www.rosenlaw.com/rosen.htm) and others.
 
 The licence is currently undergoing conformance testing and approval from a number of bodies, but since there is the option to relicense under Apache 2.0, you know that this licence is conformant with the criteria of any entity which has approved Apache 2.0 (including [OSI](http://www.opensource.org) and [FSF](http://www.fsf.org)).
 
