--- a/licenses.mdwn
+++ b/licenses.mdwn
@@ -12,13 +12,17 @@ THIS LICENCE IS A PERMISSIVE LICENCE, SO DO NOT USE IT IF YOU WANT TO AVOID THE 
 
 ### Latest
 
+[Solderpad Hardware Licence version 2.1](SHL-2.1)
+
+__Updated 12/05/20__: _Summary to be added here_.
+
+### Old
+
 [Solderpad Hardware Licence version 2.0](SHL-2.0)
 
 __Updated 05/03/18__: Many people (lawyers included) are familiar with Apache 2.0, and we had comments saying that it would be easier for those people to understand the Solderpad licence if it were presented as a single short document which acted as a wraparound to Apache 2.0, rather than presented as an edited version of it (even if the diffs are visible). This version is drafted with this in mind, and you should find it easier to understand. Like the previous versions, you can ignore the modifiers and treat it as plain Apache 2.0.
 
 We moved straight from 0.51 to 2.0, because people were using Solderpad 0.51 as de facto Solderpad 1.0, and because it’s a sufficiently large change in format (if not effect) for the step to be justified.
-
-### Old
 
 [Solderpad Hardware License version 0.51](SHL-0.51)
 
