--- a/licenses/SHL-2.1.mdwn
+++ b/licenses/SHL-2.1.mdwn
@@ -2,24 +2,23 @@
 
 This licence operates as a wraparound licence to the Apache License Version 2.0 (the "Apache License") and incorporates the terms and conditions of the Apache License (which can be found here: http://apache.org/licenses/LICENSE-2.0), with the following additions and modifications. It must be read in conjunction with the Apache License. Section 1 below modifies definitions in the Apache License, and Section 2 below replaces Section 2 of the Apache License. You may, at your option, choose to treat any Work released under this licence as released under the Apache License (thus ignoring all sections written below entirely).
 
-1.	The definitions section of the Apache License is supplemented
-or modified as follows:
+1. The definitions section of the Apache License is supplemented or modified as follows:
 
-"Copyright": any reference to 'copyright' (whether capitalised or not) includes 'Rights' (as defined below). 
+    "Copyright": any reference to 'copyright' (whether capitalised or not) includes 'Rights' (as defined below). 
 
-"Contribution" also includes any design, as well as any work of authorship.
+    "Contribution" also includes any design, as well as any work of authorship.
 
-"Derivative Works" shall not include works that remain reversibly separable from, or merely link (or bind by name) or physically connect to or interoperate with the interfaces of the Work and Derivative Works thereof.
+    "Derivative Works" shall not include works that remain reversibly separable from, or merely link (or bind by name) or physically connect to or interoperate with the interfaces of the Work and Derivative Works thereof.
 
-"Object form" shall mean any form resulting from mechanical transformation or translation of a Source form or the application of a Source form to physical material, including but not limited to compiled object code, generated documentation, the instantiation of a hardware design or physical object and conversions to other media types, including intermediate forms such as bytecodes, FPGA bitstreams, moulds, artwork and semiconductor topographies (mask works).
+    "Object form" shall mean any form resulting from mechanical transformation or translation of a Source form or the application of a Source form to physical material, including but not limited to compiled object code, generated documentation, the instantiation of a hardware design or physical object and conversions to other media types, including intermediate forms such as bytecodes, FPGA bitstreams, moulds, artwork and semiconductor topographies (mask works).
 
-"Rights" means copyright and any similar right including design right (whether registered or unregistered), rights in semiconductor topographies (mask works) and database rights (but excluding Patents and Trademarks).
+    "Rights" means copyright and any similar right including design right (whether registered or unregistered), rights in semiconductor topographies (mask works) and database rights (but excluding Patents and Trademarks).
 
-"Source form" shall mean the preferred form for making modifications, including but not limited to source code, net lists, board layouts, CAD files, documentation source, and configuration files.
+    "Source form" shall mean the preferred form for making modifications, including but not limited to source code, net lists, board layouts, CAD files, documentation source, and configuration files.
 
-"Work" also includes a design or work of authorship, whether in Source form or other Object form.
+    "Work" also includes a design or work of authorship, whether in Source form or other Object form.
 
 
-2.	Grant of Licence
+2. Grant of Licence
 
-2.1	Subject to the terms and conditions of this License, each Contributor hereby grants to You a perpetual, worldwide, non-exclusive, no-charge, royalty-free, irrevocable license under the Rights to reproduce, prepare Derivative Works of, make, adapt, repair, publicly display, publicly perform, sublicense, and distribute the Work and such Derivative Works in Source or Object form and do anything in relation to the Work as if the Rights did not exist.
+    2.1	Subject to the terms and conditions of this License, each Contributor hereby grants to You a perpetual, worldwide, non-exclusive, no-charge, royalty-free, irrevocable license under the Rights to reproduce, prepare Derivative Works of, make, adapt, repair, publicly display, publicly perform, sublicense, and distribute the Work and such Derivative Works in Source or Object form and do anything in relation to the Work as if the Rights did not exist.
