--- a/licenses/SHL-2.1.mdwn
+++ b/licenses/SHL-2.1.mdwn
@@ -22,3 +22,5 @@ This licence operates as a wraparound licence to the Apache License Version 2.0 
 2. Grant of Licence
 
     2.1	Subject to the terms and conditions of this License, each Contributor hereby grants to You a perpetual, worldwide, non-exclusive, no-charge, royalty-free, irrevocable license under the Rights to reproduce, prepare Derivative Works of, make, adapt, repair, publicly display, publicly perform, sublicense, and distribute the Work and such Derivative Works in Source or Object form and do anything in relation to the Work as if the Rights did not exist.
+
+4(a) You must give any other recipients of the Work or Derivative Works a copy of the Solderpad Hardware Licence version 2.1; and
