--- a/licenses/SHL-2.1.mdwn
+++ b/licenses/SHL-2.1.mdwn
@@ -1,6 +1,6 @@
 ﻿# THE SOLDERPAD HARDWARE LICENCE VERSION 2.1
 
-This licence operates as a wraparound licence to the Apache License Version 2.0 (the "Apache License") and incorporates the terms and conditions of the Apache License (which can be found here: http://apache.org/licenses/LICENSE-2.0), with the following additions and modifications. It must be read in conjunction with the Apache License. Section 1 below modifies definitions in the Apache License, and Section 2 below replaces Section 2 of the Apache License. You may, at your option, choose to treat any Work released under this licence as released under the Apache License (thus ignoring all sections written below entirely).
+This licence operates as a wraparound licence to the Apache License Version 2.0 (the "Apache License") and incorporates the terms and conditions of the Apache License (which can be found here: http://apache.org/licenses/LICENSE-2.0), with the following additions and modifications. It must be read in conjunction with the Apache License. Section 1 below modifies definitions in the Apache License, Section 2 below replaces Section 2 of the Apache License and subsection 4 (a) below replaces subsection 4 (a) of the Apache License. You may, at your option, choose to treat any Work released under this licence as released under the Apache License (thus ignoring all sections written below entirely).
 
 1. The definitions section of the Apache License is supplemented or modified as follows:
 
@@ -23,4 +23,6 @@ This licence operates as a wraparound licence to the Apache License Version 2.0 
 
     2.1	Subject to the terms and conditions of this License, each Contributor hereby grants to You a perpetual, worldwide, non-exclusive, no-charge, royalty-free, irrevocable license under the Rights to reproduce, prepare Derivative Works of, make, adapt, repair, publicly display, publicly perform, sublicense, and distribute the Work and such Derivative Works in Source or Object form and do anything in relation to the Work as if the Rights did not exist.
 
-4(a) You must give any other recipients of the Work or Derivative Works a copy of the Solderpad Hardware Licence version 2.1; and
+4. Redistribution
+
+    (a) You must give any other recipients of the Work or Derivative Works a copy of the Solderpad Hardware Licence version 2.1; and
