--- a/licenses.mdwn
+++ b/licenses.mdwn
@@ -12,9 +12,9 @@ THIS LICENCE IS A PERMISSIVE LICENCE, SO DO NOT USE IT IF YOU WANT TO AVOID THE 
 
 ### Latest
 
-[Solderpad Hardware Licence version 2.1](SHL-2.1)
+[Solderpad Hardware License version 2.1](SHL-2.1)
 
-__Updated 12/05/20__: _Summary to be added here_.
+__Updated 13/05/20__: _Summary to be added here_.
 
 ### Old
 
