Update from licence to license

--- a/index.mdwn
+++ b/index.mdwn
@@ -2,6 +2,6 @@
 
 At the present time this wiki is only really being used to host the Solderpad Hardware Licence.
 
-* [[Solderpad Hardware Licence|licenses]]
+* [[Solderpad Hardware License|licenses]]
 
 If you're looking for SolderPad the service, head over to [solderpad.com](http://solderpad.com).
