--- a/licenses/SHL-2.1.mdwn
+++ b/licenses/SHL-2.1.mdwn
@@ -33,10 +33,10 @@ The following definitions shall replace the corresponding definitions in the Apa
 
 APPENDIX
 
-Copyright [yyyy] [name of copyright owner]
+Copyright [yyyy] [name of copyright owner]  
 SPDX-License-Identifier: Apache-2.0 WITH SHL-2.1
 
-Licensed under the Solderpad Hardware License v 2.1 (the "License"); you may not use this file except in compliance with the License, or, at your option, the Apache License version 2.0
+Licensed under the Solderpad Hardware License v 2.1 (the "License"); you may not use this file except in compliance with the License, or, at your option, the Apache License version 2.0.
 You may obtain a copy of the License at
 
 https://solderpad.org/licenses/SHL-2.1/
