--- a/licenses/SHL-2.1.mdwn
+++ b/licenses/SHL-2.1.mdwn
@@ -8,7 +8,7 @@ This license operates as a wraparound license to the Apache License Version 2.0 
 
 "Copyright owner": any reference to 'copyright owner' shall be taken to read "Rights owner".
 
-"Copyright statement": the reference to 'copyright statement' shall be taken to read 'copyright or other statement pertaining to Rights'
+"Copyright statement": the reference to 'copyright statement' shall be taken to read 'copyright or other statement pertaining to Rights'.
 
 The following new definition shall be added to the Definitions section of the Apache License:
 
@@ -18,7 +18,7 @@ The following definitions shall replace the corresponding definitions in the Apa
 
 "License" shall mean this Solderpad Hardware License version 2.1, being the terms and conditions for use, manufacture, instantiation, adaptation, reproduction, and distribution as defined by Sections 1 through 9 of this document.
 
-"Licensor" shall mean the owner of the Rights or entity authorized by the owner of the Rights that is granting the License.
+"Licensor" shall mean the owner of the Rights or entity authorized by the owner of the Rights that is granting the License.  
  
 "Derivative Works" shall mean any work, whether in Source or Object form, that is based on (or derived from) the Work and for which the editorial revisions, annotations, elaborations, or other modifications represent, as a whole, an original work of authorship or design. For the purposes of this License, Derivative Works shall not include works that remain reversibly separable from, or merely link (or bind by name) or physically connect to or interoperate with the Work and Derivative Works thereof.
 
